manifests/00-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: default
spec:
  gatewayClassName: consul
  listeners:
    - protocol: HTTP
      port: 8443
      name: http
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: v1
kind: Service
metadata:
  name: service-api-gateway
  namespace: default
spec:
  type: NodePort
  selector:
    component: api-gateway
  ports:
    - port: 8443
      targetPort: 8443
      nodePort: 30003
